Bug 697757 - WebGL context fix for alpha being improperly set on OSX. r=jgilbert

If we request alpha and it isn't enabled, or we request it off and it gets
enabled, we now fail the pbuffer creation and fall back to FBOs. This is bad for
performance but allows us to pass the conformance test in this case.